# Smart_attendance_system

./: .dockerignore  .env.example  MANIFEST.in  docker-compose.yml  mypy.ini  pyproject.toml  readme.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 316b458235e6_initial_setup.py
scripts/: camera_client.py  register_face.py  test_gpu.py
src/: config.py  main.py
src/routers/: persons.py  web_stream.py
